--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
     <link rel="stylesheet" href="modulos/casa.css">
 </head>
 <body>
-    <div class="Casa">
-        <div class="segundo-nivel"></div> 
-         <div class="ventana"></div>
-        <div class="techo"></div>
-         <div class="pared"></div>
-        <div class="primer-nivel"> </div>
-         <div class="puerta"></div>
-        <div class="garage"></div> 
-         <div class="porton"></div>
+    <div class="casa">
+        <div class="segundo-nivel">
+            <div class="ventana"></div>
+        </div>
+         <div class="techo">
+            <div class="pared">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+         </div>
+        <div class="primer-nivel">
+            <div class="puerta"></div>
+        </div>
+        <div class="garage">
+            <div class="porton"></div>
+        </div>
     </div>
 </body>
 </html>
